--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dotenv": "^17.2.4",
     "fastify": "^5.7.4",
     "node-fetch": "^3.3.2",
-    "puppeteer": "^24.37.2"
+    "puppeteer-core": "^24.37.2"
   },
   "name": "deriv",
   "version": "1.0.0",
