--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@fastify/cors": "^11.2.0",
     "@google/generative-ai": "^0.24.1",
     "@octokit/rest": "^22.0.1",
+    "@sparticuz/chromium-min": "^143.0.4",
     "cheerio": "^1.2.0",
     "dotenv": "^17.2.4",
     "fastify": "^5.7.4",
