--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
 	"version": 2,
-	"rewrites": [
-		{ "source": "/api/(.*)", "destination": "/server.js" },
-		{ "source": "/", "destination": "/server.js" }
-	],
 	"functions": {
-		"server.js": {
+		"api/index.js": {
 			"maxDuration": 60,
 			"memory": 1024
 		}
